tldraw/apps/tldraw-logseq/src/styles.css
/* ... */
.tl-preview-minimap {
  height: 300px;
  width: 400px;

  /* Set top to be the viewport minus 10px */
  bottom: calc(100vh - 320px);

  left: 16px;
  position: absolute;
  border: 1px solid black;
  background-color: #fff;
  pointer-events: all;
}

.tl-preview-minimap-toggle {
  @apply absolute flex items-center justify-center text-sm;

  top: 60px;
  right: 50px;
  z-index: 1;
  width: 32px;
  height: 32px;
  border-radius: 4px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
  background: white;
  cursor: pointer;

  &[data-active='true'] {
    background: #eee;
  }
}

.tl-quick-search {
  width: fit-content;
  position: relative;
}

.tl-circle-button {
  @apply absolute flex items-center	justify-center transition-all;

  color: var(--ls-primary-text-color);
  background-color: var(--ls-secondary-background-color);
  font-size: 22px;
  right: calc(100% + 12px);
  height: 34px;
  width: 34px;
  border-radius: 50%;
  border: 2px solid var(--ls-secondary-background-color);
  top: 2px;

  /* &:is(:hover, [data-active='true']) {
    background-color: var(--ls-active-primary-color);
    color: var(--ls-block-highlight-color);
  }
   */
  &[data-active='false']:hover {
    background-color: var(--ls-active-primary-color);
    color: var(--ls-block-highlight-color);
    border: 2px solid var(--ls-active-primary-color);
    
    .tie {
      transform: translateY(-100%);
    }
  }

  &[data-active='true'] {
    background-color: var(--ls-active-primary-color);
    color: var(--ls-block-highlight-color);
    border: 2px solid var(--ls-active-primary-color);

    .tie {
      transform: translateY(-100%);
    }

    &:hover {
      color: var(--ls-primary-text-color);
      background-color: var(--ls-secondary-background-color);
      
      .tie {
        transform: translateY(0);
      }
    }
  }

  .tl-circle-button-icons-wrapper {
    @apply flex flex-col;

    > i.tie {
      transition: transform 0.2s ease-in-out;
    }
  }

  .tl-circle-button-icons-wrapper[data-icons-count='2'] {
    position: relative;
    width: 22px;
    height: 22px;
    overflow: hidden;
  }
}

.tl-quick-search-input-container {
  @apply flex items-center rounded-lg text-base;

  background-color: var(--ls-secondary-background-color);
  padding: 6px 16px;
  box-shadow: var(--shadow-small);
}

.tl-quick-search-input-filter {
  @apply flex items-center text-sm;

  background: rgba(0, 0, 0, 0.1);
  padding: 2px 8px;
  white-space: nowrap;
  gap: 8px;
  border-radius: 5px;
  margin-right: 8px;
}

.tl-quick-search-input-filter-remove {
  @apply flex items-center justify-center;

  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--ls-block-bullet-border-color);

  &:hover {
    background-color: rgba(0, 0, 0, 0.5) !important;
  }

  > i.ti {
    transform: translateY(-0.5px);
  }
}

.tl-input {
  position: relative;
}

.tl-input-sizer {
  position: relative;
}

.tl-text-input {
  @apply absolute inset-0;

  outline: none;
}

.tl-input-hidden {
  white-space: pre;
  opacity: 0;
  min-height: 24px;
  min-width: 60px;
}

.tl-quick-search-input {
  min-width: 240px;
}

.tl-quick-search-options {
  @apply absolute left-0 w-full flex;

  top: calc(100% + 12px);
  background-color: var(--ls-primary-background-color);
  max-height: 300px;
  min-width: 460px;
  box-shadow: var(--shadow-large);
  overflow-y: auto;
  flex-direction: column;
  border-radius: 8px;
  overscroll-behavior: none;
}

.tl-quick-search-option {
  @apply flex text-sm;

  flex-flow: column;
  padding: 8px 16px;
  cursor: pointer;
  gap: 0.5em;

  &[data-focused='true'] {
    background-color: var(--ls-menu-hover-color, #f4f5f7);
  }
}

.tl-quick-search-option-row {
  display: flex;
  gap: 0.5em;

  .breadcrumb {
    margin: 0;
  }
}

.tl-quick-search-option-placeholder {
  width: 20px;
  flex-shrink: 0;
}

.tl-quick-search-option-breadcrumb {
  opacity: 0.5;
}

.tl-logseq-portal-container {
  @apply flex flex-col rounded-lg absolute;

  top: 0;
  left: 0;
  transform: translate(1px, 1px);
  overscroll-behavior: none;
  opacity: 1;
  user-select: text;
  transform-origin: top left;

  &[data-collapsed='true'] {
    @apply overflow-hidden;
  }

  &[data-portal-selected='true'] {
    filter: brightness(0.9) contrast(0.5);
  }
}

.tl-logseq-portal-header {
  @apply flex items-center w-full;

  height: 40px;
  flex-shrink: 0;
  background: transparent;
  color: var(--ls-title-text-color);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  padding: 0 1rem;
  gap: 0.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;

  .page-ref {
    color: var(--ls-title-text-color);
  }

  .breadcrumb {
    text-overflow: ellipsis;
    overflow: hidden;
  }

  .block-content {
    white-space: nowrap;
  }
}

.tl-type-tag {
  @apply flex items-center justify-center rounded text-base;

  flex-shrink: 0;
  width: 20px;
  height: 20px;
  line-height: 1;
  color: #fff;
  background: rgba(0, 0, 0, 0.5);
  order: 0;
  flex-grow: 0;
}

.tl-html-container {
  @apply h-full w-full m-0 relative flex flex-col;
  user-select: text;
  transform-origin: top left;
}

.tl-html-anchor {
  width: fit-content;
}

.tl-html-anchor > iframe {
  @apply h-full w-full !important;
  margin: 0;
}

.tl-video-container {
  @apply h-full w-full m-0 relative;

  > video {
    @apply h-full w-full m-0 relative;
  }
}

.tl-logseq-cp-container {
  @apply h-full w-full rounded-lg;

  overscroll-behavior: none;
  flex: 1 1 0%;
  cursor: default;
}

.tl-highlighted {
  @apply p-0 rounded-none;
}

.logseq-img-icon {
  width: 20px;
  height: 20px;
  border-radius: 4px;
  box-shadow: 0 8px 12px 0 #85c8c81a, 0 4px 32px 0 #85c8c880;
}

.tl-target-not-found {
  @apply flex h-full w-full items-center justify-center;
}
/* ... */

